fixed webpage overflow

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ html {
     background-color: #eceae1;
     padding: 0px;
     margin: 0px;
-    height: 100%
+    height: 100%;
+    overflow: hidden;
 }
 
 @font-face {
@@ -22,6 +23,8 @@ body {
     padding: 0px;
     margin: 0px;
     width: 100%;
+    overflow: hidden;
+
 }
 
 header {
@@ -36,7 +39,6 @@ header {
 
 #library_title {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     align-self: center;
@@ -48,6 +50,7 @@ header {
     font-size: 240px;
     font-style: normal;
     color: black;
+    overflow:inherit;
   }
 
 .add_button {
@@ -86,7 +89,7 @@ header {
     justify-self: center;
     background-color: #a6afdd;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 
@@ -353,7 +356,7 @@ input[type="checkbox"] {
         
             #library_title {
                 /* margin: -32px 0px; */
-                font-size: 72px;
+                font-size: 70px;
             }
         
             .add_button {
